<resources>

    <string name="app_name">SurveyApp</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="space_question_text">Would you like to go to space?</string>

    <!-- text views for holding int counts of yes & no votes -->
    <string name="yes_count_text">%1$d</string>
    <string name="no_count_text">%1$d</string>

    <string name="reset_button_text">Reset Count</string>
    <string name="results_button_text">Results</string>
    <string name="yes_votes_label">Yes Votes</string>
    <string name="no_votes_label">No Votes</string>
    <string name="continue_survey_button_text">Continue Survey</string>
    <string name="reset_button">Reset</string>

</resources>